--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "employee-management",
+  "name": "angular-employee-management",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
