--- a/angular.json
+++ b/angular.json
@@ -30,8 +30,7 @@
             "styles": [
               "src/styles.scss",
               "./node_modules/datatables.net-dt/css/jquery.dataTables.css",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.js",
